--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 </svg>
                             </i>
                         </a>
-                        <span>学历/本科</span>
+                        <span>学历/大专</span>
                     </li>
                 </ul>
                 <ul>
@@ -228,8 +228,8 @@
                             </div>
                             <div class="right">
                                 <div class="main">
-                                    <h3>珠海慕容科技有限公司</h3>
-                                    <p>2016年7月~2017年6月</p>
+                                    <h3>成都正合联众网络技术有限公司</h3>
+                                    <p>2015年3月~2017年12月</p>
                                     <p>
 
                                         <<span>企业站页面开发</span>>
@@ -256,11 +256,11 @@
                             </div>
                             <div class="right">
                                 <div class="main">
-                                    <h3>珠海慕容科技有限公司</h3>
+                                    <h3>成都正合联众网络技术有限公司</h3>
                                     <p>2015年10月~2016年7月</p>
                                     <p>
 
-                                        <span>网页开发实习生</span>>
+                                        <span>前端开发</span>>
                                     </p>
                                     <p>"H5,C3,js,jQuery，Sass等"</p>
                                     <ul>
@@ -296,7 +296,7 @@
                                 </div>
                                 <div class="right">
                                     <div class="main">
-                                        <h3>珠海慕容科技有限公司</h3>
+                                        <h3>成都正合联众网络科技有限公司</h3>
                                         <p>2016年7月~2017年6月</p>
                                         <p>
 
@@ -325,7 +325,7 @@
                                 </div>
                                 <div class="right">
                                     <div class="main">
-                                        <h3>珠海慕容科技有限公司</h3>
+                                        <h3>成都正合联众</h3>
                                         <p>2015年10月~2016年7月</p>
                                         <p>
 
