--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             </div>
             <div class="text">
-                <p>二年全职前端开发经验</p>
+                <p>二年半全职前端开发经验</p>
 
                 <p>熟悉自动化,模块化开发之道</p>
 
@@ -257,7 +257,7 @@
                             <div class="right">
                                 <div class="main">
                                     <h3>成都正合联众网络技术有限公司</h3>
-                                    <p>2015年10月~2016年7月</p>
+                                    <p>2015年3月~2016年12月</p>
                                     <p>
 
                                         <span>前端开发</span>>
@@ -297,7 +297,7 @@
                                 <div class="right">
                                     <div class="main">
                                         <h3>成都正合联众网络科技有限公司</h3>
-                                        <p>2016年7月~2017年6月</p>
+                                        <p>2015年3月~2017年12月</p>
                                         <p>
 
                                             <span>企业站页面开发</span>>
