修复：页面更新

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                             <li>负责网站后台维护</li>
                                             <li>负责pc、移动端静态页开发</li>
                                             <li>负责企业站页面特效编写</li>
-                                            <li>工作之余学习vue,react,ng2,体会函数式编程思想</li>
+                                            <li>工作之余学习vue,ng2,体会函数式编程思想</li>
                                         </ul>
                                     </div>
                                 </div>
